name:                vaultaire-collector-nagios
version:             2.1.2
synopsis:            Vaultaire collector for Nagios perfdata
homepage:            https://github.com/anchor/vaultaire-collector-nagios
license:             BSD3
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2014 Anchor Systems and others
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable vaultaire-collector-nagios
  main-is:             Main.hs
  build-depends:       base >= 4.7,
                       nagios-perfdata >= 0.2.0,
                       marquise,
                       optparse-applicative,
                       bytestring >= 0.10.2,
                       cereal,
                       mtl,
                       text,
                       unordered-containers,
                       binary,
                       hashable,
                       directory,
                       vaultaire-common,
                       bifunctors,
                       containers,
                       data-binary-ieee754,
                       siphash
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto
