name:                vaultaire-collector-nagios
version:             3.1.0
synopsis:            Vaultaire collector for Nagios perfdata
homepage:            https://github.com/anchor/vaultaire-collector-nagios
license:             BSD3
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          engineering@anchor.com.au
copyright:           2014 Anchor Systems and others
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

library
  hs-source-dirs:      lib
  exposed-modules:     Data.Nagios.Perfdata.Collector.State
                       Data.Nagios.Perfdata.Collector.Cache
                       Data.Nagios.Perfdata.Collector.Util
                       Data.Nagios.Perfdata.Collector.Options
                       Data.Nagios.Perfdata.Collector.Gearman
                       Data.Nagios.Perfdata.Collector.Process
                       Data.Nagios.Perfdata.Collector.Rep
  other-modules:       Paths_vaultaire_collector_nagios

  build-depends:       base >= 4.7,
                       nagios-perfdata >= 0.2.0,
                       marquise,
                       vaultaire-common,
                       gearman-haskell >= 0.2.0,
                       optparse-applicative,
                       bytestring >= 0.10.2,
                       cereal,
                       mtl,
                       text,
                       unordered-containers,
                       binary,
                       hashable,
                       directory,
                       bifunctors,
                       containers,
                       data-binary-ieee754,
                       siphash,
                       cipher-aes,
                       base64-bytestring,
                       transformers

  default-language:    Haskell2010
  ghc-options:         -O2
                       -threaded
                       -Wall
                       -Wwarn
                       -fwarn-tabs
  ghc-prof-options:    -fprof-auto

executable vaultaire-collector-nagios
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7,
                       vaultaire-collector-nagios

  default-language:    Haskell2010
  ghc-options:         -O2
                       -threaded
                       -Wall
                       -Wwarn
                       -fwarn-tabs
  ghc-prof-options:    -fprof-auto
