name:                vaultaire-collector-nagios
version:             3.3.2
synopsis:            Vaultaire collector for Nagios perfdata
homepage:            https://github.com/anchor/vaultaire-collector-nagios
license:             BSD3
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          engineering@anchor.com.au
copyright:           2014 Anchor Systems and others
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

library
  hs-source-dirs:      lib
  exposed-modules:     Vaultaire.Collector.Nagios.Perfdata.State
                       Vaultaire.Collector.Nagios.Perfdata.Util
                       Vaultaire.Collector.Nagios.Perfdata.Options
                       Vaultaire.Collector.Nagios.Perfdata.Gearman
                       Vaultaire.Collector.Nagios.Perfdata.Process
                       Vaultaire.Collector.Nagios.Perfdata.Rep
  other-modules:       Paths_vaultaire_collector_nagios

  build-depends:       base >= 4.7,
                       nagios-perfdata >= 0.2.0,
                       marquise >= 2.8.2 && < 3.0.0,
                       vaultaire-common,
                       gearman-haskell >= 0.2.0,
                       optparse-applicative,
                       bytestring >= 0.10.2,
                       cereal,
                       mtl,
                       text,
                       unordered-containers,
                       binary,
                       hashable,
                       directory,
                       bifunctors,
                       containers,
                       data-binary-ieee754,
                       siphash,
                       cipher-aes,
                       base64-bytestring,
                       transformers,
                       monad-logger,
                       fast-logger,
                       network < 2.6

  default-language:    Haskell2010
  ghc-options:         -O2
                       -threaded
                       -Wall
                       -Wwarn
                       -fwarn-tabs
  ghc-prof-options:    -fprof-auto

executable vaultaire-collector-nagios
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7,
                       vaultaire-collector-nagios

  default-language:    Haskell2010
  ghc-options:         -O2
                       -threaded
                       -Wall
                       -Wwarn
                       -fwarn-tabs
  ghc-prof-options:    -fprof-auto
